change color of web

--- a/ereuse_devicehub/resources/did/templates/dpp.html
+++ b/ereuse_devicehub/resources/did/templates/dpp.html
@@ -49,7 +49,7 @@
 
           <div class="card">
             <div class="card-body">
-              <h3 class="nav-link mt-5" style="color: #993365">
+              <h3 class="nav-link mt-5" style="color: #007bc0">
                 {{ result.result.data.hardware.device.type }} - 
                 {{ result.result.data.hardware.device.manufacturer }} 
                 {{ result.result.data.hardware.device.model }}
