--- a/ereuse_devicehub/templates/ereuse_devicehub/user_login.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/user_login.html
@@ -13,7 +13,7 @@
 
             <div class="d-flex justify-content-center py-4">
               <a href="{{ url_for('core.login') }}" class="d-flex align-items-center w-auto">
-                <img src="{{ url_for('static', filename='img/usody_logo_transparent_noicon-y-purple-120x41.png') }}" alt="">
+                <img src="https://www.upc.edu/++theme++homeupc/assets/images/logomark.png" alt="">
               </a>
             </div><!-- End Logo -->
 
@@ -69,12 +69,6 @@
               </div>
             </div>
 
-            <div class="credits">
-              <a href="https://help.usody.com/en/getting-started/login-usody/" target="_blank">Help</a> | 
-              <a href="https://www.usody.com/legal/privacy-policy" target="_blank">Privacy</a> | 
-              <a href="https://www.usody.com/legal/terms" target="_blank">Terms</a>
-            </div>
-
           </div>
         </div>
       </div>
@@ -84,19 +78,6 @@
   </div>
 </main><!-- End #main -->
 
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog  modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Do you want to try USOdy tools?</h5>
-      </div>
-      <div class="modal-body">
-        Just write an email to <a href="mali:hello@usody.com">hello@usody.com</a>
-      </div>
-    </div>
-  </div>
-</div> <!-- End register modal -->
 <script>
 const togglePassword = document.querySelector('#togglePassword');
 const password = document.querySelector('#id_password');
