--- a/ereuse_devicehub/templates/did/layout.html
+++ b/ereuse_devicehub/templates/did/layout.html
@@ -65,7 +65,7 @@
 
           <div class="card">
             <div class="card-body">
-              <h3 class="nav-link mt-5" style="color: #993365">{{ device_real.type }} - {{ device_real.verbose_name }}</h3>
+              <h3 class="nav-link mt-5" style="color: #007bc0;">{{ device_real.type }} - {{ device_real.verbose_name }}</h3>
               <div class="row">
                 <div class="col-12">
                   <h5 class="card-title">Basic</h5>
