role instead of rol

--- a/ereuse_devicehub/modules/did/templates/did/layout.html
+++ b/ereuse_devicehub/modules/did/templates/did/layout.html
@@ -58,7 +58,7 @@
             </li>
           </ul>
           {% if rol %}
-            <br />Actual Rol: {{ rol }}
+            <br />Current Role: {{ rol }}
           {% endif %}
         </nav>
         <div class="col-xl-12">
@@ -264,7 +264,7 @@
 
       <form action="{{ path }}" method="get">
       <div class="modal-header">
-        <h5 class="modal-title">Select your Rol <span id="title-action"></span></h5>
+        <h5 class="modal-title">Select your Role <span id="title-action"></span></h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
 
