--- a/ereuse_devicehub/modules/did/templates/verifier.html
+++ b/ereuse_devicehub/modules/did/templates/verifier.html
@@ -69,6 +69,20 @@
               <div class="row">
                 <div class="col-12">
                   <h5 class="card-title">Details</h5>
+                  {% if manuals.details %}
+                  <div class="row">
+                    <div class="col">
+                      {% if manuals.details.logo %}
+                        <img style="max-width: 50px; margin-right: 15px;" src="{{ manuals.details.logo }}" />
+                      {% endif %}
+                    </div>
+                    <div class="col">
+                      {% if manuals.details.image %}
+                        <img style="width: 100px;" src="{{ manuals.details.image }}" />
+                      {% endif %}
+                    </div>
+                  </div>
+                  {% endif %}
                   <div class="row">
                     <div class="col">
                       Type
