--- a/ereuse_devicehub/templates/inventory/upload_placeholder.html
+++ b/ereuse_devicehub/templates/inventory/upload_placeholder.html
@@ -72,6 +72,12 @@
                         <option value="Keyboard"
                         {% if form.type.data == 'Keyboard' %} selected="selected"{% endif %}>Keyboard</option>
                       </optgroup>
+                      <optgroup label="Other Type of Device">
+                        <option value="SolarPanel"
+                        {% if form.type.data == 'SolarPanel' %} selected="selected"{% endif %}>Solar Panel</option>
+                        <option value="Other"
+                        {% if form.type.data == 'Other' %} selected="selected"{% endif %}>Other</option>
+                      </optgroup>
                     </select>
                     <small class="text-muted form-text">Type of devices</small>
                     {% if form.type.errors %}
