--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -226,6 +226,12 @@
                       Ready
                     </a>
                   </li>
+                  <li>
+                    <a href="javascript:newAction('EWaste')" class="dropdown-item">
+                      <i class="bi bi-trash-fill"></i>
+                      E-Waste
+                    </a>
+                  </li>
                 </ul>
               </div>
 
