add Manufacturer DPP in templates

--- a/ereuse_devicehub/modules/did/templates/anonymous.html
+++ b/ereuse_devicehub/modules/did/templates/anonymous.html
@@ -117,6 +117,13 @@
                   </div>
                   <div class="row">
                     <div class="col">
+                      Manufacturer DPP:
+                    </div>
+                    <div class="col">
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col">
                       Usody Identifier (DHID)
                     </div>
                     <div class="col">
