--- a/ereuse_devicehub/modules/did/templates/operator.html
+++ b/ereuse_devicehub/modules/did/templates/operator.html
@@ -149,6 +149,13 @@
                   </div>
                   <div class="row">
                     <div class="col">
+                      Manufacturer DPP:
+                    </div>
+                    <div class="col">
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col">
                       Last Digital Passport (Last Dpp):
                     </div>
                     <div class="col">
