--- a/ereuse_devicehub/modules/did/templates/verifier.html
+++ b/ereuse_devicehub/modules/did/templates/verifier.html
@@ -147,6 +147,13 @@
                       <a href="{{ url_for('did.did', id_dpp=device_abstract.chid) }}"><small class="text-muted">{{ device_abstract.chid }}</small></a>
                     </div>
                   </div>
+                  <div class="row">
+                    <div class="col">
+                      Manufacturer DPP:
+                    </div>
+                    <div class="col">
+                    </div>
+                  </div>
                   {% if last_dpp %}
                   <div class="row">
                     <div class="col">
